--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="bahasa">
                 <img src="html5.png" alt="HTML 5">
                 <img src="css3.png" alt="CSS">
-                <img src="python.png" alt="Python">
+                <img src="python.png" alt="Python" width="200px">
                 <img src="php.png" alt="Php">
             </div>
         </div>
